# N_Commit_Tool

./: .gitignore  Cargo.toml  Dockerfile.windows  README.md
examples/: config.rs  ncommit  test.rs  toml_parse.rs
fixfures/: config.yml  ncommit.toml  ncommit.yml_tpl  nconfig.yml
src/: config.rs  config.yml  flow.rs  main.rs  nconfig.yml  pr.rs  tests.rs  view.rs
