[package]
name = "ncommit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
serde= { version = "1.0.137", features = ["derive"] }
colour = "0.6.0"
inquire = "0.4.0"
version-compare = "0.1.0"
anyhow = "1.0.65"
serde_yaml = "0.9.13"
